# aws-blog-feed

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
copilot/: .workspace
copilot/app/: manifest.yml
templates/: entries.html.jinja  index.html.jinja
