[tool.poetry]
name = "aws-blog-feed"
version = "0.1.0"
description = "Filter the AWS Blog RSS Feed"
authors = ["Mike Fiedler <miketheman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
feedparser = "^6.0.11"
jinja2 = "^3.1.4"
cachetools = "^5.3.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
